kubernetes/cluster/smart-home/esphome/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  namespace: smart-home
  labels:
    app.kubernetes.io/name: esphome
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: esphome.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: esphome
                port:
                  number: 80
  tls:
    - hosts:
        - esphome.brhd.io
